--- a/style.css
+++ b/style.css
@@ -4,10 +4,16 @@
 }
 .homepage {
   background: #ffffff;
-  width: 1734px;
+  width: 100%;
   height: 4578px;
   position: relative;
   overflow: hidden;
+}
+
+body {
+  max-width: 100%;
+  overflow-x: hidden ;
+  margin: 0;
 }
 .sction-contactus {
   position: absolute;
