ya funciona el inicio de sesion

--- a/style.css
+++ b/style.css
@@ -1298,9 +1298,13 @@ body {
   position: relative;
 }
 
-.login,
-.login * {
-  box-sizing: border-box;
+button {
+  cursor: pointer;
+}
+
+button:hover {
+  border-radius: 30px;
+  background-color: hsl(0, 0%, 90%);
 }
 .login {
   flex-shrink: 0;
