--- a/style.css
+++ b/style.css
@@ -4,19 +4,36 @@
 }
 .homepage {
   background: #ffffff;
-  width: 1601px;
-  height: 4412px;
+  width: 100%;
+  height: 4578px;
   position: relative;
-  overflow: hidden;
 }
-.footer {
-  height: 345px;
+
+body {
+  max-width: 100%;
+  overflow-x: hidden ;
+  margin: 0;
+}
+.section-contactus {
+  position: absolute;
+  inset: 0;
+}
+.backgrpund-contactus {
+  background: #ebebeb;
+  height: 640px;
   position: absolute;
   right: 0px;
   left: 0px;
+  bottom: 345px;
+}
+.frame-86 {
+  height: 345px;
+  position: absolute;
+  right: -5px;
+  left: 0px;
   bottom: 0px;
 }
-.background-footer {
+.rectangle-33 {
   height: 345px;
   position: absolute;
   right: 0px;
@@ -146,18 +163,6 @@
   height: 57.39%;
   object-fit: cover;
 }
-.section-contactus {
-  position: absolute;
-  inset: 0;
-}
-.backgrpund-contactus {
-  background: #ebebeb;
-  height: 640px;
-  position: absolute;
-  right: 0px;
-  left: 0px;
-  bottom: 345px;
-}
 .section-info-contact {
   display: flex;
   flex-direction: row;
@@ -167,8 +172,8 @@
   width: 634px;
   height: 80px;
   position: absolute;
-  left: calc(50% - 322.5px);
-  bottom: 397px;
+  left: 483px;
+  top: 4103px;
 }
 .adress {
   flex-shrink: 0;
@@ -374,7 +379,7 @@
   line-height: 200%;
   font-weight: 400;
   position: absolute;
-  left: calc(50% - -249.5px);
+  right: 463px;
   bottom: 799.57px;
   width: 83px;
   height: 47.49px;
@@ -391,7 +396,7 @@
   width: 840px;
   height: 151.97px;
   position: absolute;
-  left: calc(50% - 158.5px);
+  right: 114px;
   bottom: 536px;
 }
 .txt-mensaje {
@@ -402,7 +407,7 @@
   line-height: 200%;
   font-weight: 400;
   position: absolute;
-  left: calc(50% - 162.5px);
+  right: 864px;
   bottom: 687.97px;
   width: 94px;
   height: 47.49px;
@@ -419,7 +424,7 @@
   width: 365px;
   height: 51.05px;
   position: absolute;
-  left: calc(50% - 158.5px);
+  right: 589px;
   bottom: 746.15px;
 }
 .lbl-nombre2 {
@@ -431,7 +436,7 @@
   width: 432px;
   height: 51.05px;
   position: absolute;
-  left: calc(50% - -249.5px);
+  right: 114px;
   bottom: 746.15px;
 }
 .txt-nombre {
@@ -442,7 +447,7 @@
   line-height: 200%;
   font-weight: 400;
   position: absolute;
-  left: calc(50% - 158.5px);
+  right: 868px;
   bottom: 805.51px;
   width: 86px;
   height: 47.49px;
@@ -457,11 +462,15 @@
 }
 .send {
   width: 19.43px;
-  height: 26.6px;
+  height: 28.8px;
   position: absolute;
-  left: calc(50% - -665.9px);
-  bottom: 475.62px;
-  transform: translate(-27.58px, -0.99px);
+  right: 6.97%;
+  left: 91.91%;
+  width: 1.12%;
+  bottom: 10.34%;
+  top: 89.03%;
+  height: 0.63%;
+  transform: translate(-29.78px, -1px);
   overflow: visible;
 }
 .enviar2 {
@@ -471,16 +480,16 @@
   font-size: 16px;
   font-weight: 500;
   position: absolute;
-  left: calc(50% - -559.5px);
-  bottom: 481px;
+  right: 184px;
+  top: calc(50% - -1785px);
 }
-.backgroud-enviar {
+.rectangle-35 {
   border-radius: 0px;
   width: 140px;
   height: 45px;
   position: absolute;
-  left: calc(50% - -541.5px);
-  bottom: 468px;
+  right: 114px;
+  top: calc(50% - -1777px);
   overflow: visible;
 }
 .frame-89 {
@@ -491,10 +500,11 @@
   justify-content: flex-start;
   flex-wrap: wrap;
   width: 362px;
-  height: 337.15px;
   position: absolute;
-  left: calc(50% - 664.5px);
-  bottom: 517.23px;
+  left: 141px;
+  bottom: 11.29%;
+  top: 81.35%;
+  height: 7.36%;
 }
 .txt-title {
   color: #001f3f;
@@ -531,15 +541,15 @@
   width: 1599px;
   height: 675px;
   position: absolute;
-  left: 6px;
-  top: 2709px;
+  left: 0px;
+  top: 2918px;
 }
 .img-values {
   width: 530px;
   height: 530px;
   position: absolute;
-  left: calc(50% - -127.5px);
-  top: 2811px;
+  right: 149px;
+  top: 3020px;
   object-fit: cover;
 }
 .txt-values {
@@ -550,8 +560,8 @@
   line-height: 130%;
   font-weight: 400;
   position: absolute;
-  left: calc(50% - 639.5px);
-  top: 2892px;
+  left: 155px;
+  top: 3101px;
   width: 594px;
   height: 302px;
   display: flex;
@@ -566,8 +576,8 @@
   line-height: 200%;
   font-weight: 700;
   position: absolute;
-  left: calc(50% - 640.5px);
-  top: 2848px;
+  left: 154px;
+  top: 3057px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -580,9 +590,9 @@
   background: #f3f3f3;
   height: 656px;
   position: absolute;
-  right: -6px;
-  left: 11px;
-  top: 2053px;
+  right: 0px;
+  left: 5px;
+  top: 2262px;
 }
 .txt-history {
   color: #001f3f;
@@ -592,8 +602,8 @@
   line-height: 130%;
   font-weight: 400;
   position: absolute;
-  left: calc(50% - -233.19px);
-  top: 2257px;
+  right: 121.84px;
+  top: 2466px;
   width: 451.46px;
   display: flex;
   align-items: center;
@@ -607,8 +617,8 @@
   line-height: 130%;
   font-weight: 700;
   position: absolute;
-  left: calc(50% - -341.36px);
-  top: 2196px;
+  right: 121.94px;
+  top: 2405px;
   width: 343.2px;
   height: 45px;
   display: flex;
@@ -619,8 +629,8 @@
   width: 915px;
   height: 653px;
   position: absolute;
-  left: 6px;
-  top: 2056px;
+  left: 0px;
+  top: 2265px;
   object-fit: cover;
 }
 .polygon-1 {
@@ -628,16 +638,16 @@
   width: 900.48px;
   height: 654.5px;
   position: absolute;
-  left: 32.55px;
-  top: 2055px;
+  left: 26.55px;
+  top: 2264px;
   overflow: visible;
 }
 .img-logo-history {
   width: 150.46px;
   height: 153px;
   position: absolute;
-  left: calc(50% - -12.85px);
-  top: 2489px;
+  left: 807.35px;
+  top: 2698px;
   object-fit: cover;
 }
 .section-aboutus {
@@ -649,8 +659,8 @@
   width: 1599px;
   height: 674px;
   position: absolute;
-  left: 6px;
-  top: 1379px;
+  left: 0px;
+  top: 1588px;
 }
 .txt-aboutus {
   color: #001f3f;
@@ -660,8 +670,8 @@
   line-height: 130%;
   font-weight: 400;
   position: absolute;
-  left: calc(50% - 640.5px);
-  top: 1663px;
+  left: 154px;
+  top: 1872px;
   width: 559px;
   height: 197px;
   display: flex;
@@ -676,70 +686,29 @@
   line-height: 200%;
   font-weight: 700;
   position: absolute;
-  left: calc(50% - 640.5px);
-  top: 1592px;
+  left: 154px;
+  top: 1801px;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-/* ------------------------------- products ------------------------------------- */
-.section-products,
-.section-products * {
-  box-sizing: border-box;
 }
 .section-products {
   position: absolute;
   inset: 0;
 }
 .productos-section {
-  height: 763px;
+  background: rgba(235, 235, 235, 0.64);
   position: absolute;
   right: 0px;
   left: 0px;
-  top: 640px;
-  overflow: visible;
+  bottom: 65.31%;
+  top: 16.16%;
+  height: 18.52%;
 }
 .products-box {
-  width: 1310px;
-  height: 575px;
+  width: 1996px;
+  height: 657px;
   position: static;
-}
-.all-products {
-  width: 229px;
-  height: 47px;
-  position: static;
-}
-.background-all-products {
-  background: rgba(217, 217, 217, 0);
-  border-radius: 30px;
-  border-style: solid;
-  border-color: #000000;
-  border-width: 1px;
-  width: 229px;
-  height: 47px;
-  position: absolute;
-  left: calc(50% - -429px);
-  top: 1260px;
-}
-.txt-mas-productos {
-  color: var(--navyblue, #001f3f);
-  text-align: center;
-  font-family: "Poppins-Medium", sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  position: absolute;
-  left: calc(50% - -448px);
-  top: 1272px;
-}
-.arrow-1 {
-  width: 29.75px;
-  height: 0px;
-  position: absolute;
-  left: calc(50% - -611px);
-  top: 1284px;
-  transform: translate(0px, -7.36px);
-  overflow: visible;
 }
 .selects {
   width: 94px;
@@ -750,40 +719,152 @@
   background: #d9d9d9;
   border-radius: 50%;
   width: 23px;
-  height: 23px;
   position: absolute;
-  left: calc(50% - -32px);
-  top: 1257px;
+  left: 836px;
+  bottom: 66.75%;
+  top: 32.74%;
+  height: 0.5%;
 }
 .ellipse-289 {
   background: #d9d9d9;
   border-radius: 50%;
   width: 24px;
-  height: 23px;
   position: absolute;
-  left: calc(50% - 4px);
-  top: 1257px;
+  left: 800px;
+  bottom: 66.75%;
+  top: 32.74%;
+  height: 0.5%;
 }
 .ellipse-288 {
   background: #d9d9d9;
   border-radius: 50%;
   width: 23px;
-  height: 23px;
   position: absolute;
-  left: calc(50% - 39px);
-  top: 1257px;
+  left: 765px;
+  bottom: 66.75%;
+  top: 32.74%;
+  height: 0.5%;
+}
+.btn-masproducts {
+  width: 187.15px;
+  height: 37px;
+  position: static;
+}
+.rectangle-30 {
+  border-radius: 0px;
+  width: 187.15px;
+  height: auto;
+  position: absolute;
+  right: 253.85px;
+  bottom: 66.6%;
+  top: 32.59%;
+  height: 0.81%;
+  overflow: visible;
+}
+.mas-productos {
+  color: #304c78;
+  text-align: left;
+  font-family: "Inter-Regular", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  position: absolute;
+  right: 289.71px;
+  bottom: 66.78%;
+  top: 32.77%;
+  height: 0.46%;
+  width: 135.6px;
+}
+.arrow-1 {
+  width: 29.75px;
+  height: auto;
+  position: absolute;
+  right: 269.96px;
+  bottom: 66.99%;
+  top: 33.01%;
+  height: 0%;
+  transform: translate(0px, -7.36px);
+  overflow: visible;
+}
+.card-hompage-pass {
+  background: #ffffff;
+  border-radius: 24px;
+  border-style: solid;
+  border-color: #304c78;
+  border-width: 2px;
+  opacity: 0.5;
+  width: 312px;
+  position: absolute;
+  left: 1497px;
+  bottom: 68.48%;
+  top: 21.82%;
+  height: 9.7%;
+  overflow: hidden;
+}
+.txt-price {
+  color: #304c78;
+  text-align: left;
+  font-family: "Inter-SemiBold", sans-serif;
+  font-size: 20px;
+  line-height: 130%;
+  font-weight: 600;
+  position: absolute;
+  left: 24px;
+  bottom: 68px;
+}
+.txt-name {
+  color: #000000;
+  text-align: left;
+  font-family: "Inter-SemiBold", sans-serif;
+  font-size: 20px;
+  line-height: 130%;
+  font-weight: 600;
+  position: absolute;
+  left: 24px;
+  bottom: 98px;
+}
+.img-car {
+  position: absolute;
+  right: 23px;
+  left: 24px;
+  bottom: 140px;
+  top: 23px;
+  object-fit: cover;
+}
+.card-homepage-pass {
+  background: #ffffff;
+  border-radius: 24px;
+  border-style: solid;
+  border-color: #304c78;
+  border-width: 2px;
+  opacity: 0.5;
+  width: 312px;
+  position: absolute;
+  left: -187px;
+  bottom: 68.48%;
+  top: 21.82%;
+  height: 9.7%;
+  overflow: hidden;
+}
+.img-card {
+  position: absolute;
+  right: 23px;
+  left: 24px;
+  bottom: 140px;
+  top: 23px;
+  object-fit: cover;
 }
 .card-homepage {
   background: #ffffff;
   border-radius: 24px;
   border-style: solid;
-  border-color: #2b6be7;
+  border-color: #304c78;
   border-width: 2px;
-  width: 245px;
-  height: 376px;
+  width: 308px;
   position: absolute;
-  left: calc(50% - 652px);
-  top: 836px;
+  left: 154px;
+  bottom: 68.48%;
+  top: 21.82%;
+  height: 9.7%;
   overflow: hidden;
 }
 .txt-name-card {
@@ -798,7 +879,7 @@
   bottom: 98px;
 }
 .txt-price-card {
-  color: #2b6be7;
+  color: #304c78;
   text-align: left;
   font-family: "Inter-SemiBold", sans-serif;
   font-size: 20px;
@@ -808,148 +889,74 @@
   left: 24px;
   bottom: 68px;
 }
-.img-card {
+.img-card2 {
   position: absolute;
-  right: 6.12%;
-  left: 6.53%;
-  width: 87.35%;
-  bottom: 42.02%;
-  top: 3.99%;
-  height: 53.99%;
+  right: 15px;
+  left: 16px;
+  bottom: 158px;
+  top: 15px;
   object-fit: cover;
 }
 .card-homepage2 {
   background: #ffffff;
   border-radius: 24px;
   border-style: solid;
-  border-color: #2b6be7;
+  border-color: #304c78;
   border-width: 2px;
-  width: 245px;
-  height: 376px;
+  width: 308px;
   position: absolute;
-  left: calc(50% - 385px);
-  top: 836px;
+  left: 490px;
+  bottom: 68.48%;
+  top: 21.82%;
+  height: 9.7%;
   overflow: hidden;
 }
 .card-homepage3 {
   background: #ffffff;
   border-radius: 24px;
   border-style: solid;
-  border-color: #2b6be7;
+  border-color: #304c78;
   border-width: 2px;
-  width: 245px;
-  height: 376px;
+  width: 308px;
   position: absolute;
-  left: calc(50% - 115px);
-  top: 836px;
+  left: 829px;
+  bottom: 68.48%;
+  top: 21.82%;
+  height: 9.7%;
   overflow: hidden;
 }
 .card-homepage4 {
   background: #ffffff;
   border-radius: 24px;
   border-style: solid;
-  border-color: #2b6be7;
+  border-color: #304c78;
   border-width: 2px;
-  width: 245px;
-  height: 376px;
+  width: 308px;
   position: absolute;
-  left: calc(50% - -151px);
-  top: 836px;
-  overflow: hidden;
-}
-.card-homepage5 {
-  background: #ffffff;
-  border-radius: 24px;
-  border-style: solid;
-  border-color: #2b6be7;
-  border-width: 2px;
-  width: 245px;
-  height: 376px;
-  position: absolute;
-  left: calc(50% - -413px);
-  top: 836px;
+  left: 1163px;
+  bottom: 68.48%;
+  top: 21.82%;
+  height: 9.7%;
   overflow: hidden;
 }
 .productos {
   color: #001f3f;
   text-align: left;
   font-family: "MergeOne-Regular", sans-serif;
-  font-size: 34px;
+  font-size: 40px;
   line-height: 130%;
   font-weight: 400;
   position: absolute;
-  left: calc(50% - 652px);
-  top: 732px;
+  left: 174px;
+  bottom: 78.86%;
+  top: 19.05%;
+  height: 2.1%;
   width: 741px;
-  height: 96px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
 }
 
-
-/* --------------------------------- banner --------------------------------- */
-.section-banner,
-.section-banner * {
-  box-sizing: border-box;
-}
-.section-banner {
-  width: 1604px;
-  height: 590px;
-  position: relative;
-  overflow: hidden;
-}
-.shadow-banner {
-  background: #d2d2d2;
-  border-radius: 50%;
-  width: 1002px;
-  position: absolute;
-  left: calc(50% - 501px);
-  bottom: 17.97%;
-  top: 66.44%;
-  height: 15.59%;
-  filter: blur(7.5px);
-}
-.img-banner-lf {
-  border-radius: 15px;
-  width: 826px;
-  position: absolute;
-  left: calc(50% - 437px);
-  bottom: 26.27%;
-  top: 2.54%;
-  height: 71.19%;
-  object-fit: cover;
-}
-.img-banner-lf2 {
-  border-radius: 15px;
-  width: 826px;
-  position: absolute;
-  left: calc(50% - 389px);
-  bottom: 26.27%;
-  top: 2.54%;
-  height: 71.19%;
-  object-fit: cover;
-}
-.img-banner-center {
-  border-radius: 15px;
-  width: 778px;
-  position: absolute;
-  left: calc(50% - 389px);
-  bottom: 23.9%;
-  top: 0%;
-  height: 76.1%;
-  object-fit: cover;
-}
-.img-logo {
-  width: 163px;
-  position: absolute;
-  left: calc(50% - -180px);
-  bottom: 26.27%;
-  top: 59.15%;
-  height: 14.58%;
-  box-shadow: 6px 8px 4px 0px rgba(48, 76, 120, 0.9);
-  object-fit: cover;
-}
 /* ------------------------------  banner  ---------------------------------------*/
 .section-banner {
   height: 617px;
@@ -994,17 +1001,12 @@
 	95% {margin-left: -300%;}
 }
 
-/* --------------------------------- header ----------------------------- */
 .header {
   position: absolute;
   inset: 0;
 }
-.header-logo,
-.header-logo * {
-  box-sizing: border-box;
-}
 .header-logo {
-  width: 1599px;
+  width: 1628px;
   height: 183px;
   position: static;
 }
@@ -1042,6 +1044,10 @@
   position: relative;
   object-fit: cover;
 }
+.info-box,
+.info-box * {
+  box-sizing: border-box;
+}
 .info-box {
   display: flex;
   flex-direction: row;
@@ -1065,7 +1071,7 @@
   justify-content: flex-start;
   position: absolute;
   left: 0px;
-  top: 1px;
+  top: 0px;
 }
 .group-60 {
   flex-shrink: 0;
@@ -1137,7 +1143,7 @@
   justify-content: flex-start;
   position: absolute;
   left: 204.81px;
-  top: 1px;
+  top: 0px;
 }
 .group-59 {
   flex-shrink: 0;
@@ -1195,7 +1201,7 @@
   justify-content: flex-start;
   position: absolute;
   left: 404.81px;
-  top: 1px;
+  top: 0px;
 }
 .frame-59 {
   display: flex;
@@ -1242,64 +1248,10 @@
   font-weight: 400;
   position: relative;
 }
-.login {
-  flex-shrink: 0;
-  width: 187px;
-  height: 47px;
-  position: static;
-}
-.rectangle-36 {
-  background: rgba(217, 217, 217, 0);
-  border-radius: 30px;
-  border-style: solid;
-  border-color: #000000;
-  border-width: 1px;
-  width: 187px;
-  height: 47px;
-  position: absolute;
-  left: 635.81px;
-  top: 0px;
-}
-.img-person {
-  width: 24px;
-  height: 24px;
-  position: absolute;
-  left: 651.81px;
-  top: 10.5px;
-}
-.user {
-  height: auto;
-  position: absolute;
-  right: 12.5%;
-  left: 12.5%;
-  width: 75%;
-  bottom: 8.33%;
-  top: 7.29%;
-  height: 84.38%;
-  overflow: visible;
-}
-.txt-iniciar-sesion {
-  color: var(--navyblue, #001f3f);
-  text-align: center;
-  font-family: "Poppins-Medium", sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  position: absolute;
-  left: 688.81px;
-  top: 9.5px;
-}
 
-
-
-
-/* ------------------------- boton inicio de sesion --------------------------------- */
-button {
-  cursor: pointer;
-}
-
-button:hover {
-  border-radius: 30px;
-  background-color: hsl(0, 0%, 90%);
+.login,
+.login * {
+  box-sizing: border-box;
 }
 .login {
   flex-shrink: 0;
@@ -1347,6 +1299,7 @@ button:hover {
   left: 688.81px;
   top: 9.5px;
 }
+
 
 /* ----------------------------  navbar -----------------------------------*/
 
