--- a/prueba.css
+++ b/prueba.css
@@ -1,36 +1,74 @@
-
-.section-banner {
-    height: 100vh;
-    width: 100%;
-    display: grid;
-    place-content: center;
+body {
+    margin: 0;
+    font-family: sans-serif;
+    background-color: aliceblue;
 }
 
-.slide {
-    place-content: center;
-    width: 130vh;
-    max-width: 779px;
-    height: 449px;
-    overflow: hidden;
-    border-radius: 10px;
+a {
+    text-decoration: none;
 }
 
-.slide ul {
+.gallery {
     display: flex;
-    padding: 0;
-    width: 300px;
-
-    animation: slide 15s infinite cubic-bezier(0.55, 0.48, 0.37, 0.92) ;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin: 50px 0;
 }
 
+.content {
+    width: 20%;
+    margin: 15px;
+    box-sizing: border-box;
+    float: left;
+    text-align: center;
+    border-radius: 20px;
+    cursor: pointer;
+    padding-top: 10px;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
+    0 10px 10px rgba(0, 0, 0, 0.22);
+    transition: .4s;
+    background: #f2f2f2;
+}
 
-@keyframes slide {
-	0% {margin-left: 0%;}
-	30% {margin-left: 0%;}
-	
-	35% {margin-left: -100%;}
-	70% {margin-left: -100%;}
-	
-	75% {margin-left: -200%;}
-	95%{margin-left: -200%;}
+.content:hover {
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16),
+    0 3px 6px rgba(0, 0, 0, 0.23);
+    transform: translate(0px , -8px);
+}
+
+.gallery img {
+    width: 277px;
+    height: 271px;
+    text-align: center;
+    margin: 0 auto;
+    display: block;
+}
+
+.tittle-card {
+    text-align: center;
+    padding-top: 0 8px ;
+}
+
+.price {
+    font-size: 26px;
+    text-align: center;
+    color: #222f3e;
+    margin: 0;
+}
+
+.btn-comprar {
+    background-color: #001F3F;
+    text-align: center;
+    color: azure;
+    font-size: 24px;
+    width: 100%;
+    padding: 15px;
+    border: 0;
+    outline: none;
+    cursor: pointer;
+    margin-top: 5px;
+    border-bottom-right-radius: 20px ;
+    border-bottom-left-radius:20px ;
 }
