--- a/style.css
+++ b/style.css
@@ -2227,6 +2227,8 @@ body {
 95%{margin-left: -200%;}
 }
 
+/* ------------------------------  header  ---------------------------------------*/  
+
 .header {
   position: absolute;
   inset: 0;
