se integra la productpage

--- a/style.css
+++ b/style.css
@@ -1413,7 +1413,9 @@ input:focus {
 .close:hover,
 .close:focus {
   color: black;
-}.homepage,
+}
+
+.homepage,
 .homepage * {
   box-sizing: border-box;
 }
