--- a/product-page/style-product-page.css
+++ b/product-page/style-product-page.css
@@ -9,12 +9,15 @@
   position: relative;
   overflow: hidden;
 }
+
+
+/* ----------------------------------- header -----------------------------------*/
 .header {
   position: absolute;
   inset: 0;
 }
 .header-logo {
-  width: 1599px;
+  width: 1628px;
   height: 183px;
   position: static;
 }
@@ -23,7 +26,7 @@
   width: 1599px;
   height: 166px;
   position: absolute;
-  left: 0px;
+  left: -3px;
   top: 0px;
 }
 .background-logo {
@@ -31,7 +34,7 @@
   width: 627px;
   height: 183px;
   position: absolute;
-  left: 0px;
+  left: -3px;
   top: 0px;
   overflow: visible;
 }
@@ -40,9 +43,9 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  width: 1432px;
   position: absolute;
-  left: 100px;
+  right: 109px;
+  left: 97px;
   top: 0px;
 }
 .sin-t-tulo-1-removebg-preview-1 {
@@ -51,6 +54,10 @@
   height: 128px;
   position: relative;
   object-fit: cover;
+}
+.info-box,
+.info-box * {
+  box-sizing: border-box;
 }
 .info-box {
   display: flex;
@@ -193,7 +200,7 @@
 }
 .info-email {
   flex-shrink: 0;
-  width: 405px;
+  width: 211px;
   height: 45px;
   position: static;
 }
@@ -252,39 +259,43 @@
   font-weight: 400;
   position: relative;
 }
-.inicio-sesion {
+
+/* ---------------- boton inicio de sesion ------------------------------- */
+button {
+  cursor: pointer;
+}
+
+button:hover {
+  border-radius: 30px;
+  background-color: hsl(0, 0%, 90%);
+}
+
+.login {
   flex-shrink: 0;
-  width: 184px;
-  height: 45px;
+  width: 187px;
+  height: 47px;
   position: static;
 }
-.iniciar-sesion {
-  color: var(--navyblue, #001f3f);
-  text-align: center;
-  font-family: "Poppins-Medium", sans-serif;
-  font-size: 16px;
-  font-weight: 500;
+.backgroud-login {
+  background: rgba(217, 217, 217, 0);
+  border-radius: 30px;
+  border-style: solid;
+  border-color: #000000;
+  border-width: 1px;
+  width: 187px;
+  height: 47px;
   position: absolute;
-  left: 274px;
-  top: 10px;
-}
-.rectangle-35 {
-  border-radius: 0px;
-  width: 184px;
-  height: 45px;
-  position: absolute;
-  left: 221px;
+  left: 635.81px;
   top: 0px;
-  overflow: visible;
 }
-.user {
+.img-person {
   width: 24px;
   height: 24px;
   position: absolute;
-  left: 237px;
-  top: 11px;
+  left: 651.81px;
+  top: 10.5px;
 }
-.user2 {
+.user {
   height: auto;
   position: absolute;
   right: 12.5%;
@@ -295,6 +306,20 @@
   height: 84.38%;
   overflow: visible;
 }
+.txt-iniciar-sesion {
+  color: var(--navyblue, #001f3f);
+  text-align: center;
+  font-family: "Poppins-Medium", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  position: absolute;
+  left: 688.81px;
+  top: 9.5px;
+}
+
+
+/* ----------------------------  navbar -----------------------------------*/
+
 .navbar {
   background: var(--navyblue, #001f3f);
   padding: 0px 0px 0px 20px;
@@ -303,8 +328,8 @@
   align-items: center;
   justify-content: space-between;
   position: absolute;
-  right: 100px;
-  left: 100px;
+  right: 103px;
+  left: 97px;
   top: 120px;
   overflow: hidden;
 }
@@ -316,47 +341,23 @@
   justify-content: flex-start;
   flex-shrink: 0;
   position: relative;
+  list-style-type: none;
 }
-.btn-inicio {
+.options-navbar li {
+  color: #ffffff;
+  text-align: center;
+  font-family: "Poppins-Regular", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  position: relative;
+}
+.options-navbar li a:visited{
+  color: #ffffff;
+}
+.options-navbar li a:hover {
   color: #ffd700;
-  text-align: center;
-  font-family: "Poppins-Medium", sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  position: relative;
 }
-.btn-quienessomos {
-  color: #ffffff;
-  text-align: center;
-  font-family: "Poppins-Regular", sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  position: relative;
-}
-.btn-produtos {
-  color: #ffffff;
-  text-align: center;
-  font-family: "Poppins-Regular", sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  position: relative;
-}
-.btn-ubicanos {
-  color: #ffffff;
-  text-align: center;
-  font-family: "Poppins-Regular", sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  position: relative;
-}
-.btn-contactanos {
-  color: #ffffff;
-  text-align: center;
-  font-family: "Poppins-Regular", sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  position: relative;
-}
+
 .backgrount-search {
   background: #ffd700;
   padding: 20px;
@@ -379,13 +380,57 @@
   position: relative;
 }
 .lbl-search {
-  border-radius: 0px;
+  border-radius: 15px;
   flex-shrink: 0;
   width: 298px;
   height: 34px;
   position: relative;
   overflow: visible;
+  background-color: #ffffff;
+  text-align: center;
+  font-family: 'Arial', sans-serif;
 }
+input:focus {
+  outline: none;
+  border-color: #304c78;
+  box-shadow: 0 0 5px #304c78;
+}
+
+/* Estilos para el modal */
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+}
+
+
+
+
 .group-filtro-1 {
   position: absolute;
   inset: 0;
