--- a/styles.css
+++ b/styles.css
@@ -282,6 +282,77 @@ button:hover #login {
     object-fit: cover;
 }
 
+/* --------------------- ventana emergente inicio sesion -----------------------*/
+
+.modal {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    padding: 20px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    z-index: 1000;
+}
+
+.modal-contenido {
+    background-color: #fefefe;
+    margin: 10% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 40%;
+    position: relative;
+    text-align: center;
+    z-index: 1000;
+    border-radius: 30px;
+}
+
+.modal-contenido h2 {
+    margin-top: 30px;
+    font-family: Poppins;
+    font-size: 40px;
+    color: #000;
+}
+
+.modal-contenido h3 {
+    margin-top: 10px;
+    color: #636363;
+    font-family: Poppins;
+    font-size: 15px;
+}
+
+.modal-contenido form {
+    padding: 20px;
+    margin-top: 30px;
+}
+
+.modal-contenido input {
+    border-radius: 11px;
+    border: 1px solid #001F3F;
+    background: #FFF;
+}
+
+.modal-contenido button {
+    margin-top: 20px;
+    width: 400px;
+    height: 45px;
+    background-color: #304C78;  
+    border-radius: 100px;
+    color: #FFF;
+    font-family: Poppins;
+    font-size: 16px;
+}
+
+.cerrar {
+
+    position: absolute;
+    top: 10px;
+    right: 30px;
+    font-size: 40px;
+    cursor: pointer;
+}
+
+
 /* --------------------- fin header -----------------------*/
 
 /* -------------------------- nabvar ------------------------- */
@@ -946,36 +1017,4 @@ footer {
     left: calc(50% - 411.5px);
     bottom: 81px;
     object-fit: cover;
-}
-
-
-/* ------------------------ vetana emergente inicio de sesion ------------------------- */
-.modal {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-}
-
-.modal-contenido {
-    background-color: #fefefe;
-    margin: 10% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    position: relative;
-    text-align: center;
-    z-index: 1000;
-    /* Ajusta este valor según sea necesario */
-}
-
-.cerrar {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 20px;
-    cursor: pointer;
 }
