--- a/product-page/styleProductPage.css
+++ b/product-page/styleProductPage.css
@@ -157,25 +157,25 @@
   object-fit: cover;
 }
 
-.header {
-  position: absolute;
-  inset: 0;
+header {
+  background-color: #fff;
+  padding: 0px;
   width: 100%;
-  height: 154px;
 }
+
 .header-logo {
-  width: 100%;
+  width: 1443px;
   height: 154px;
   position: static;
 }
+
 .background-info {
   background: #ffffff;
-  width: 100%;
+  width: 1443px;
   height: 154px;
-  position: absolute;
-  left: -3px;
-  top: 0px;
+
 }
+
 .background-logo {
   border-radius: 0px;
   width: 474px;
@@ -186,7 +186,6 @@
   overflow: visible;
 }
 
-
 .header-info-box {
   display: flex;
   flex-direction: row;
@@ -196,7 +195,9 @@
   right: 80px;
   left: 87px;
   top: 0px;
+  height: 120px;
 }
+
 .sin-t-tulo-1-removebg-preview-1 {
   flex-shrink: 0;
   width: 223px;
@@ -204,6 +205,7 @@
   position: relative;
   object-fit: cover;
 }
+
 .info-box {
   display: flex;
   flex-direction: row;
@@ -211,14 +213,17 @@
   align-items: center;
   justify-content: flex-end;
   flex-shrink: 0;
+  width: 683px;
   position: relative;
 }
+
 .info-adress {
   flex-shrink: 0;
   width: 149px;
   height: 37px;
   position: static;
 }
+
 .frame-61 {
   display: flex;
   flex-direction: row;
@@ -229,6 +234,7 @@
   left: -12px;
   top: 18px;
 }
+
 .address-icon {
   flex-shrink: 0;
   width: 35px;
@@ -236,6 +242,7 @@
   position: relative;
   object-fit: cover;
 }
+
 .frame-60 {
   display: flex;
   flex-direction: column;
@@ -245,6 +252,7 @@
   flex-shrink: 0;
   position: relative;
 }
+
 .address {
   color: var(--navyblue, #001f3f);
   text-align: center;
@@ -253,6 +261,7 @@
   font-weight: 500;
   position: relative;
 }
+
 ._123-new-york-usa {
   color: #808080;
   text-align: center;
@@ -261,12 +270,14 @@
   font-weight: 400;
   position: relative;
 }
+
 .info-phone {
   flex-shrink: 0;
   width: 147px;
   height: 37px;
   position: static;
 }
+
 .frame-612 {
   display: flex;
   flex-direction: row;
@@ -277,6 +288,7 @@
   left: 157px;
   top: 18px;
 }
+
 .phone-icon {
   flex-shrink: 0;
   width: 35px;
@@ -284,6 +296,7 @@
   position: relative;
   object-fit: cover;
 }
+
 .phone-number {
   color: var(--navyblue, #001f3f);
   text-align: center;
@@ -292,6 +305,7 @@
   font-weight: 500;
   position: relative;
 }
+
 ._650-123-1212 {
   color: #808080;
   text-align: center;
@@ -300,12 +314,14 @@
   font-weight: 400;
   position: relative;
 }
+
 .info-email {
   flex-shrink: 0;
   width: 169px;
   height: 37px;
   position: static;
 }
+
 .frame-613 {
   display: flex;
   flex-direction: row;
@@ -316,6 +332,7 @@
   left: 324px;
   top: 18px;
 }
+
 .email-icon {
   flex-shrink: 0;
   width: 35px;
@@ -323,6 +340,7 @@
   position: relative;
   object-fit: cover;
 }
+
 .email-us-here {
   color: var(--navyblue, #001f3f);
   text-align: center;
@@ -331,6 +349,7 @@
   font-weight: 500;
   position: relative;
 }
+
 .example-gmail-com {
   color: #808080;
   text-align: center;
@@ -340,11 +359,9 @@
   position: relative;
 }
 
-
-/* ------ login ------*/
 button {
   cursor: pointer;
-  border: none;
+  border: 1px;
 }
 
 button:hover #login {
@@ -356,21 +373,9 @@ button:hover #login {
   width: 170px;
   height: 73px;
   position: static;
-  border-radius: 14px;
+  border-radius: 20px;
 }
 
-.login2 {
-  background: rgba(217, 217, 217, 0);
-  border-radius: 14px;
-  border-style: solid;
-  border-color: #000000;
-  border-width: 1px;
-  width: 170px;
-  height: 73px;
-  position: absolute;
-  left: 513px;
-  top: 0px;
-}
 
 .txt-iniciar-sesion {
   color: var(--navyblue, #001f3f);
@@ -406,52 +411,7 @@ button:hover #login {
   object-fit: cover;
 }
 
-.modal {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-}
-
-.modal-contenido {
-  background-color: #fefefe;
-  margin: 10% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-  position: relative;
-  text-align: center;
-  z-index: 1000;
-  /* Ajusta este valor según sea necesario */
-}
-
-.cerrar {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 20px;
-  cursor: pointer;
-}
-
-form {
-  text-align: left;
-}
-
-form label {
-  display: block;
-  margin-bottom: 8px;
-}
-
-form input {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 16px;
-  box-sizing: border-box;
-}
-
+/* -------------------------- nabvar ------------------------- */
 
 .navbar {
   background: var(--navyblue, #001f3f);
@@ -468,6 +428,7 @@ form input {
   overflow: hidden;
   height: 45px;
 }
+
 .options-navbar {
   display: flex;
   flex-direction: row;
@@ -499,12 +460,24 @@ form input {
   color: #ffd700;
 }
 
+.backgrount-search {
+  background: #ffd700;
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  align-items: center;
+  justify-content: flex-start;
+  flex-shrink: 0;
+  position: relative;
+  overflow: hidden;
+}
 
 .txt-search {
   color: var(--navyblue, #001f3f);
   text-align: left;
   font-family: "Poppins-Medium", sans-serif;
-  font-size: 16px;
+  font-size: 13px;
   font-weight: 500;
   position: relative;
   display: flex;
@@ -512,21 +485,25 @@ form input {
 }
 
 .lbl-search {
-  border-radius: 15px;
+  border-radius: 30px;
   flex-shrink: 0;
-  width: 298px;
-  height: 34px;
+  width: 281px;
+  height: 28px;
   position: relative;
   overflow: visible;
   background-color: #ffffff;
   text-align: center;
   font-family: 'Arial', sans-serif;
+  border: none;
+  outline: none;
 }
 
 input:focus {
+  border: none;
   outline: none;
   border-color: #304c78;
   box-shadow: 0 0 5px #304c78;
+  
 }
 
 .backgrount-search {
@@ -538,7 +515,6 @@ input:focus {
   align-items: center;
   justify-content: flex-start;
   flex-shrink: 0;
-  width: 454px;
   position: relative;
   overflow: hidden;
 }
