--- a/styles.css
+++ b/styles.css
@@ -323,7 +323,7 @@ header {
     margin-top: 20px;
     width: 400px;
     height: 45px;
-    background-color: #304C78;  
+    background-color: #304C78;
     border-radius: 100px;
     color: #FFF;
     font-family: Poppins;
@@ -358,7 +358,7 @@ header {
     top: 113px;
     overflow: hidden;
     height: 45px;
-  }
+}
 
 .options-navbar {
     display: flex;
@@ -377,21 +377,21 @@ header {
     font-size: 13px;
     font-weight: 400;
     position: relative;
-  }
-  
-  .options-navbar li a {
+}
+
+.options-navbar li a {
     display: block;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-  }
-  
-  .options-navbar li a:hover {
-    color: #ffd700;
-  }
+}
 
-  .backgrount-search {
+.options-navbar li a:hover {
+    color: #ffd700;
+}
+
+.backgrount-search {
     background: #ffd700;
     padding: 20px;
     display: flex;
@@ -402,7 +402,7 @@ header {
     flex-shrink: 0;
     position: relative;
     overflow: hidden;
-  }
+}
 
 .txt-search {
     color: var(--navyblue, #001f3f);
@@ -434,7 +434,7 @@ input:focus {
     outline: none;
     border-color: #304c78;
     box-shadow: 0 0 5px #304c78;
-    
+
 }
 
 /* Estilos para el modal */
@@ -511,80 +511,91 @@ section {
     place-content: center;
 }
 
-.productos-section a {
-    text-decoration: none;
-}
-
-.gallery {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    margin: 50px 0;
-}
-
-.content {
-    width: 20%;
-    margin: 15px;
-    box-sizing: border-box;
-    float: left;
-    text-align: center;
-    border-radius: 20px;
-    cursor: pointer;
-    padding-top: 10px;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
-        0 10px 10px rgba(0, 0, 0, 0.22);
-    transition: .4s;
-    background: #f2f2f2;
-}
-
-.content:hover {
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16),
-        0 3px 6px rgba(0, 0, 0, 0.23);
-    transform: translate(0px, -8px);
-}
-
-.gallery img {
-    width: 277px;
-    height: 271px;
-    text-align: center;
-    margin: 0 auto;
-    display: block;
-}
-
-.tittle-card {
-    text-align: center;
-    padding-top: 0 8px;
-}
-
-.price {
-    font-size: 26px;
-    text-align: center;
-    color: #222f3e;
-    margin: 0;
-}
-
-.btn-comprar {
-    background-color: #001F3F;
-    text-align: center;
-    color: azure;
+.title-productos {
+    text-align: left;
+    font-family: "MergeOne-Regular", sans-serif;
     font-size: 24px;
+    margin-bottom: 40PX;
+}
+
+.fila {
     width: 100%;
-    padding: 15px;
-    border: 0;
-    outline: none;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+
+.fila .item {
+    max-width: 210px;
+    padding: 10px;
+    width: 189px;
+    height: 250px;
+    border-radius: 24px;
+    text-align: center;
+    margin: 0 10px;
     cursor: pointer;
-    margin-top: 5px;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
+    border: 1px;
+    border-style: solid;
+    border-color: #2b6be7;
+
+    display: grid;
+    text-align: center;
+}
+
+.fila .item:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.fila .item .contenedor-foto {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.fila .item .contenedor-foto img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.fila .item .descripcion {
+    color: #707070;
+    font-family: "Inter-SemiBold", sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.fila .item .precio {
+    color: #2b6be7;
+    font-family: "Inter-SemiBold", sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.fila .item .detalles {
+    visibility: hidden;
 }
 
 .btn-mas-productos {
-    width: 187.15px;
-    height: 37px;
-    position: static;
+    display: inline-block;
+    padding: 8px 15px;
+    text-decoration: none;
+    color: #000;
+    border: 2px solid #000;
+    border-radius: 25px;
+    transition: background-color 0.3s, color 0.3s;
+    text-align: center;
+    width: 150px; 
+    margin-left: auto; 
+    display: block; 
 }
+
+.btn-mas-productos:hover,
+.btn-mas-productos:visited {
+    color: #000;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
 
 /* -------------------------- sobre nosotros --------------------------- */
 /* --------------------------- mision ------------------------------------- */
@@ -596,7 +607,8 @@ section {
     padding: 50px;
     padding-left: 200px;
     margin: auto;
-    max-width: 1200px; /* Ajusta el valor según tus necesidades */
+    max-width: 1200px;
+    /* Ajusta el valor según tus necesidades */
 }
 
 .imgMision {
@@ -641,7 +653,8 @@ section {
     padding: 50px;
     padding-right: 200px;
     margin: auto;
-    max-width: 1200px; /* Ajusta el valor según tus necesidades */
+    max-width: 1200px;
+    /* Ajusta el valor según tus necesidades */
 }
 
 .vision img {
@@ -686,7 +699,8 @@ section {
     padding: 50px;
     padding-right: 200px;
     margin: auto;
-    max-width: 1200px; /* Ajusta el valor según tus necesidades */
+    max-width: 1200px;
+    /* Ajusta el valor según tus necesidades */
 }
 
 .valores img {
@@ -733,7 +747,8 @@ section {
     padding-left: 200px;
     padding-right: 200px;
     margin: auto;
-    max-width: 1200px; /* Ajusta el valor según tus necesidades */
+    max-width: 1200px;
+    /* Ajusta el valor según tus necesidades */
 }
 
 .lineacorporativa img {
