--- a/styles.css
+++ b/styles.css
@@ -453,7 +453,7 @@ input:focus {
 /* -------------------------- banner ----------------------------------- */
 section {
     width: 100%;
-    height: 480px;
+    height: 550px;
 }
 
 .section-banner {
@@ -510,6 +510,20 @@ section {
     display: grid;
     place-content: center;
 }
+.productos {
+    color: #001f3f;
+    text-align: left;
+    font-family: "MergeOne-Regular", sans-serif;
+    font-size: 24px;
+    line-height: 130%;
+    font-weight: 400;
+    position: relative;
+    width: 741px;
+    height: 96px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+  }
 
 .productos-section a {
     text-decoration: none;
@@ -773,11 +787,17 @@ section {
     display: flex;
     text-align: center;
     flex-direction: column;
+    background-color: #eeeeee;
 }
 
 
 form {
-    text-align: left;
+    display: flex;
+    margin: auto;
+    margin-top: 20px;
+    text-align: center;
+    flex-wrap: wrap;
+    max-width: 570px;
 }
 
 form label {
@@ -791,11 +811,17 @@ form input {
     margin-bottom: 16px;
     box-sizing: border-box;
 }
-
-form {
-    max-width: 400px;
-    margin: 0 auto;
+input.lbl-nombre {
+    width: 393px;
 }
+input.lbl-telefono {
+    width: 170px;
+}
+input.lbl-mensaje {
+    height: 160px;
+    
+}
+
 
 .contacto h2 {
     color: #001f3f;
@@ -808,6 +834,7 @@ form {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 15px;
 }
 
 .contacto p {
@@ -818,16 +845,20 @@ form {
     font-weight: 400;
     width: 561px;
     height: 78px;
+    position: relative;
     display: flex;
+    align-items: center;
     justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .contacto input {
     background: #f6f6f6;
-    border-radius: 8px;
+    border-radius: 13px;
     border-style: solid;
     border-color: #001f3f;
-    border-width: 1px;
+    border-width: 0.2px;
 }
 
 .contacto input::placeholder {
@@ -851,7 +882,7 @@ form {
     border-color: #001f3f;
     border-width: 1px;
     width: 113.3px;
-    height: 36.14px;
+    height: 30px;
     position: relative;
     overflow: visible;
 }
